[package]
name = "darkmatter"
version = "0.1.0"
edition = "2021"

[dependencies]
#diesel = "2.2.2"
#log = "0.4.22"
#rocket = "0.5.1"
#serde = "1.0.204"
clap = { version = "4.5.15"}
clap-verbosity-flag = "2.2.1"
tokio = { version = "1.39.2",features = ["full"]}
log = "0.4.22"
env_logger = "0.11.5"
tokio-util = { version = "0.7.11", features = ["full"] }
rand = "0.9.0-alpha.2"
